syntax = "proto3";

package mypackage;

service MyService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc GetTime (TimeRequest) returns (TimeReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message TimeRequest {}

message TimeReply {
    string currentTime = 1;
}